handled esbuild and upload to lambda

--- a/cloudfront/02_api_gateway/api/package.json
+++ b/cloudfront/02_api_gateway/api/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@types/archiver": "^7.0.0",
     "@types/aws-lambda": "8.10.158",
     "@types/node": "24.10.1",
+    "archiver": "^7.0.1",
     "esbuild": "0.27.0",
     "typescript": "5.9.3"
   },
