--- a/cloudfront/04_signed_urls/api/package.json
+++ b/cloudfront/04_signed_urls/api/package.json
@@ -1,13 +1,16 @@
 {
   "name": "api",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "type": "commonjs",
+  "dependencies": {
+    "aws-sdk": "2.1692.0"
+  },
+  "devDependencies": {
+    "@aws-sdk/types": "3.936.0"
+  }
 }
